--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "jwt-async": "^1.1.2",
     "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.2",
     "ws": "^6.2.1"
   }
 }
